--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
+#Configuracion de la base de datos
 spring.datasource.url=jdbc:mysql://localhost/elite
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
+
+#Documentacion con springdoc y swagger
+springdoc.api-docs.enabled=true
+spring.swagger-ui.enabled=true
